--- a/K2TIRF/stylesheets/styles.css
+++ b/K2TIRF/stylesheets/styles.css
@@ -86,6 +86,7 @@ h1 {
 h2 {
   font-size: 24px;
   clear: both;
+  color:#003366;
 }
 
 h3 {
@@ -110,12 +111,17 @@ a {
   text-decoration:none;
 }
 
+a:link {
+	color:#003366;
+}
+
 a:hover {
-  text-decoration: underline;
+	color:#003366;
+	text-decoration: underline;
 }
 
 a:visited{
-	color:#0000EE;
+	color:#003366;
 }
 
 a small {
@@ -371,85 +377,7 @@ table.component_list_supplemental tr td{
 }
 /*table.component_list tr:last-child td{ border-bottom: none; }*/
 
-table.adopters {
-  width: 100%;
-  /*max-width: 900px;*/
-  text-align: left;
-    /*border-spacing: 1px;*/
-    border-collapse: separate;
-   background-color: #bbb;/*#232323;*/
- }
-
-table.adopters tr td{
-	background-color:#eee;
-} /*
- table.adopters td:nth-child(1){
-	white-space: nowrap;
- }
-table.adopters td:nth-child(2){
-	width: 25%;
- }
- table.adopters td:nth-child(3){
-	width: 20%;
- }*/
-table.adopters th {
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 15px;
-  font-weight: bold;
-  padding: 4px;
-  background: #232323;
-  color: #FDFEFB;
-	vertical-align: bottom;
- }
-table.adopters td {
-  padding-left: 4px;
-  padding-right: 4px;
-  padding-bottom: 4px;
-  padding-top: 4px;
-  background: #eee;
-  vertical-align: top;
- }
- 
- 
-table.SMILEtech {
-  width: 60%;
-  /*max-width: 900px;*/
-  text-align: left;
-    /*border-spacing: 1px;*/
-    border-collapse: separate;
-   background-color: #bbb;/*#232323;*/
- }
-
-table.SMILEtech tr td{
-	background-color:#eee;
-} /*
- table.adopters td:nth-child(1){
-	white-space: nowrap;
- }
-table.adopters td:nth-child(2){
-	width: 25%;
- }
- table.adopters td:nth-child(3){
-	width: 20%;
- }*/
-table.SMILEtech th {
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 15px;
-  font-weight: bold;
-  padding: 4px;
-  background: #232323;
-  color: #FDFEFB;
-	vertical-align: bottom;
- }
-table.SMILEtech td {
-  padding-left: 4px;
-  padding-right: 4px;
-  padding-bottom: 4px;
-  padding-top: 4px;
-  background: #eee;
-  vertical-align: top;
- }
- 
+  
 /* Wrapper */
 .wrapper {
   /*width:1160px;*/
@@ -470,27 +398,27 @@ h1.header {
   line-height: 1.3em;
   border-bottom: none;
   margin-top: 0;
-  color: #000;
-  margin-bottom:-20px;
+  color: #BCB540;
+  margin-bottom:-15px;
 }
 
 
 header {
-  background-color: #eee;
-  color: #000;
-  width:240px;/*170px*/
+  background-color: #003366;
+  color: #036;
+  width:240px;
   float:left;
   position:fixed;
-  /*border: 1px solid #ddd;*/
-  -webkit-border-top-right-radius: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-  -moz-border-radius-topright: 4px;
-  -moz-border-radius-bottomright: 4px;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  padding: 19px 25px 7px 50px; /*34px 25px 22px 50px;*/
+  border: 1px solid #e5ecff;
+  -webkit-border-top-right-radius: 1px;
+  -webkit-border-bottom-right-radius: 10px;
+  -moz-border-radius-topright: 10px;
+  -moz-border-radius-bottomright: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding: 34px 25px 22px 25px;
   min-height: 241px;
-  margin: 0px 25px 0 0;
+  margin: 10px 25px 0 1px;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -505,12 +433,12 @@ a.name {
 header ul {
   list-style:none;
   padding:0;
-	/*border:1px solid #ccc;*/
+	border:1px solid ##e5ecff;
 	padding-top:10px;
 	padding-right:30px;
 	padding-bottom:1px;
 	padding-left:10px;
-	background-color:#f6f6f6;
+	background-color:#FFFFFF;
   border-radius:3px;
 }
 
